[gd_scene load_steps=21 format=3 uid="uid://bjvf11sssce64"]

[ext_resource type="FontFile" uid="uid://chh1ubq87bkcp" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_2lm20"]
[ext_resource type="Script" uid="uid://df38flyh6vv76" path="res://scripts/skillsmenu.gd" id="1_b5nfe"]
[ext_resource type="Texture2D" uid="uid://b6wc6q8c2rnnn" path="res://assets/helthbar/chinese_frame.png" id="1_qtkqn"]
[ext_resource type="FontFile" uid="uid://bngdo3g3ydmuf" path="res://assets/fonts/PixelOperator8.ttf" id="2_cab2a"]
[ext_resource type="Texture2D" uid="uid://dphnpq2ydb2ue" path="res://assets/botella6.png" id="3_cab2a"]
[ext_resource type="Texture2D" uid="uid://dafus7yy5tcrk" path="res://assets/botella5.png" id="4_sb217"]
[ext_resource type="Texture2D" uid="uid://dt6mvw7bqwcmb" path="res://assets/botella1.png" id="5_vnntv"]
[ext_resource type="Texture2D" uid="uid://brta2ipyxvfg0" path="res://assets/botella2.png" id="6_7pa17"]
[ext_resource type="Texture2D" uid="uid://vimyhx0hs2b2" path="res://assets/fonts/Icons/Icon_13.png" id="9_vd8cd"]
[ext_resource type="Texture2D" uid="uid://6dl2xpxk5xfu" path="res://assets/fonts/Icons/7Social-media-icons_40.png" id="10_alvbl"]
[ext_resource type="Texture2D" uid="uid://b1ixhf3w2ksga" path="res://assets/fonts/Icons/7Social-media-icons_38.png" id="11_wv8t4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wv8t4"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wd330"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qv3l"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84scb"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt2on"]
bg_color = Color(0.957493, 0.70045406, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5nfe"]
bg_color = Color(0.1907191, 0.12856773, 7.219613e-08, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vd8cd"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alvbl"]
bg_color = Color(0.19215687, 0.12941177, 0, 0.7176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnl2j"]
bg_color = Color(0.95686275, 0.7019608, 0, 0.7176471)

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5nfe")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1.1591587, 1.1591587, 1.1591587, 0.47058824)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qtkqn")
expand_mode = 1

[node name="controls" type="Button" parent="."]
modulate = Color(0.49019608, 0.36862746, 0.08235294, 1)
top_level = true
layout_mode = 0
offset_left = 665.0
offset_top = 59.0
offset_right = 943.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_wv8t4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wd330")
theme_override_styles/hover = SubResource("StyleBoxFlat_5qv3l")
theme_override_styles/disabled = SubResource("StyleBoxFlat_84scb")
theme_override_styles/focus = SubResource("StyleBoxFlat_lt2on")
text = "Controls"

[node name="skills" type="Button" parent="."]
process_mode = 3
modulate = Color(0.4890135, 0.368769, 0.08055892, 1)
top_level = true
layout_mode = 0
offset_left = 277.0
offset_top = 59.0
offset_right = 486.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_b5nfe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vd8cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_alvbl")
theme_override_styles/focus = SubResource("StyleBoxFlat_rnl2j")
text = "Skills"

[node name="skills_cont" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = -6.0
offset_right = 1154.0
offset_bottom = 656.0

[node name="wallslide" type="Node2D" parent="skills_cont"]
visible = false
position = Vector2(119, 183)

[node name="Label" type="Label" parent="skills_cont/wallslide"]
modulate = Color(0.11519358, 0.059227265, 1.8049032e-08, 1)
texture_filter = 1
offset_left = 24.0
offset_top = 10.0
offset_right = 1052.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 18
text = "Now you can climb,jump and slide walls just press left or right
against a wall and press jump"

[node name="TextureRect" type="TextureRect" parent="skills_cont/wallslide"]
offset_left = -61.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 73.0
texture = ExtResource("3_cab2a")

[node name="ColorRect" type="ColorRect" parent="skills_cont/wallslide"]
offset_left = -57.0
offset_top = -18.0
offset_right = 964.0
offset_bottom = 66.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="wallslide_locked" type="Node2D" parent="skills_cont"]
position = Vector2(120, 184)

[node name="ColorRect" type="ColorRect" parent="skills_cont/wallslide_locked"]
offset_left = -57.0
offset_top = -18.0
offset_right = 964.0
offset_bottom = 66.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="boost" type="Node2D" parent="skills_cont"]
visible = false
position = Vector2(124, 265)

[node name="Label" type="Label" parent="skills_cont/boost"]
modulate = Color(0.13096565, 0.06981277, 0, 1)
texture_filter = 1
offset_left = 24.0
offset_top = 10.0
offset_right = 1052.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 18
text = "This mighty liquor boosts your punch and kicks"

[node name="TextureRect" type="TextureRect" parent="skills_cont/boost"]
offset_left = -61.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 73.0
texture = ExtResource("4_sb217")

[node name="ColorRect2" type="ColorRect" parent="skills_cont/boost"]
offset_left = -60.0
offset_top = -4.0
offset_right = 961.0
offset_bottom = 80.0
color = Color(0.25882354, 0.1254902, 0, 0.44705883)

[node name="boost_looked" type="Node2D" parent="skills_cont"]
position = Vector2(120, 184)

[node name="ColorRect" type="ColorRect" parent="skills_cont/boost_looked"]
offset_left = -57.0
offset_top = 76.0
offset_right = 964.0
offset_bottom = 160.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="locked3" type="Node2D" parent="skills_cont"]
position = Vector2(118, 192)

[node name="ColorRect" type="ColorRect" parent="skills_cont/locked3"]
offset_left = -56.0
offset_top = 164.0
offset_right = 965.0
offset_bottom = 248.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="locked4" type="Node2D" parent="skills_cont"]
position = Vector2(118, 198)

[node name="ColorRect" type="ColorRect" parent="skills_cont/locked4"]
offset_left = -57.0
offset_top = 254.0
offset_right = 964.0
offset_bottom = 338.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="misc" type="Node2D" parent="skills_cont"]
visible = false
position = Vector2(121, 365)

[node name="Label" type="Label" parent="skills_cont/misc"]
modulate = Color(0.13096565, 0.06981277, 0, 1)
texture_filter = 1
offset_left = 24.0
offset_top = 10.0
offset_right = 1052.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 18
text = "blabla bla bla bla bla bla bla "

[node name="TextureRect" type="TextureRect" parent="skills_cont/misc"]
offset_left = -62.0
offset_top = -14.0
offset_right = 19.0
offset_bottom = 84.0
texture = ExtResource("5_vnntv")

[node name="ColorRect2" type="ColorRect" parent="skills_cont/misc"]
offset_left = -58.0
offset_top = -8.0
offset_right = 963.0
offset_bottom = 76.0
color = Color(0.25882354, 0.1254902, 0, 0.44705883)

[node name="misc2" type="Node2D" parent="skills_cont"]
visible = false
position = Vector2(122, 459)

[node name="Label" type="Label" parent="skills_cont/misc2"]
modulate = Color(0.13096565, 0.06981277, 0, 1)
texture_filter = 1
offset_left = 24.0
offset_top = 10.0
offset_right = 1052.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 18
text = "blabla bla bla bla bla bla bla "

[node name="TextureRect" type="TextureRect" parent="skills_cont/misc2"]
offset_left = -63.0
offset_top = -21.0
offset_right = 18.0
offset_bottom = 77.0
texture = ExtResource("6_7pa17")

[node name="ColorRect2" type="ColorRect" parent="skills_cont/misc2"]
offset_left = -61.0
offset_top = -8.0
offset_right = 960.0
offset_bottom = 76.0
color = Color(0.25882354, 0.1254902, 0, 0.44705883)

[node name="controls_cont" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062000003
offset_right = 1105.68
offset_bottom = 617.824

[node name="Node2D" type="Node2D" parent="controls_cont"]
position = Vector2(1, -65)

[node name="Label" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 64.0
offset_top = 143.0
offset_right = 177.0
offset_bottom = 174.0
theme_override_colors/font_color = Color(0.8600372, 0.5785955, 0.11791359, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Jump"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 67.0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 241.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Move"

[node name="Label9" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 128.0
offset_top = 541.0
offset_right = 241.0
offset_bottom = 572.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Pause"

[node name="Label3" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 69.0
offset_top = 278.0
offset_right = 200.0
offset_bottom = 309.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Punch"

[node name="Label4" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 71.0
offset_top = 344.0
offset_right = 169.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Kick"

[node name="Label5" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 61.0
offset_top = 411.0
offset_right = 256.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Activate"

[node name="Label6" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 69.0
offset_top = 481.0
offset_right = 238.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(0.85882354, 0.5803922, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 30
text = "Special"

[node name="Label7" type="Label" parent="controls_cont/Node2D"]
modulate = Color(0, 0, 0, 1)
offset_left = 340.0
offset_top = 172.0
offset_right = 470.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 23
text = "PC"

[node name="Label14" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 503.0
offset_top = 213.0
offset_right = 668.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 20
text = "L-Joystick"

[node name="Label15" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 773.0
offset_top = 211.0
offset_right = 938.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 20
text = "L-Joystick"

[node name="Label28" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 543.0
offset_top = 547.0
offset_right = 708.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="Label29" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 808.0
offset_top = 547.0
offset_right = 973.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("2_cab2a")
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="Label10" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 351.0
offset_top = 419.0
offset_right = 546.0
offset_bottom = 445.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "I"

[node name="Label27" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 352.0
offset_top = 544.0
offset_right = 547.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "P"

[node name="Label11" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 349.0
offset_top = 351.0
offset_right = 544.0
offset_bottom = 377.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "K"

[node name="Label12" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 345.0
offset_top = 282.0
offset_right = 540.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "J"

[node name="Label13" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 350.0
offset_top = 487.0
offset_right = 545.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "U"

[node name="Label16" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 554.0
offset_top = 148.0
offset_right = 749.0
offset_bottom = 174.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "X"

[node name="Label17" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 824.0
offset_top = 147.0
offset_right = 1019.0
offset_bottom = 173.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "A"

[node name="Label18" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 560.0
offset_top = 280.0
offset_right = 755.0
offset_bottom = 306.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "O"

[node name="Label23" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 553.0
offset_top = 416.0
offset_right = 748.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "L1"

[node name="Label24" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 829.0
offset_top = 282.0
offset_right = 1024.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "X"

[node name="Label26" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 820.0
offset_top = 415.0
offset_right = 1015.0
offset_bottom = 441.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "LB"

[node name="Label25" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 833.0
offset_top = 487.0
offset_right = 1028.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "Y"

[node name="Label19" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 829.0
offset_top = 347.0
offset_right = 1024.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 25
text = "B"

[node name="Label20" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 559.0
offset_top = 315.0
offset_right = 754.0
offset_bottom = 387.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 53
text = "□"

[node name="Label21" type="Label" parent="controls_cont/Node2D"]
top_level = true
offset_left = 554.0
offset_top = 453.0
offset_right = 749.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("1_2lm20")
theme_override_font_sizes/font_size = 53
text = "△"

[node name="TextureRect" type="TextureRect" parent="controls_cont/Node2D"]
top_level = true
offset_left = 339.0
offset_top = 139.0
offset_right = 379.0
offset_bottom = 179.0
texture = ExtResource("9_vd8cd")

[node name="TextureRect2" type="TextureRect" parent="controls_cont/Node2D"]
top_level = true
offset_left = 395.0
offset_top = 205.0
offset_right = 435.0
offset_bottom = 245.0
rotation = 1.5709609
texture = ExtResource("9_vd8cd")

[node name="TextureRect3" type="TextureRect" parent="controls_cont/Node2D"]
top_level = true
offset_left = 322.0
offset_top = 245.0
offset_right = 362.0
offset_bottom = 285.0
rotation = 4.7123017
texture = ExtResource("9_vd8cd")

[node name="ColorRect2" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 41.0
offset_top = 199.0
offset_right = 1105.0
offset_bottom = 253.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect3" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 41.0
offset_top = 266.0
offset_right = 1105.0
offset_bottom = 320.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect4" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 40.0
offset_top = 336.0
offset_right = 1105.0
offset_bottom = 390.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect5" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 40.0
offset_top = 402.0
offset_right = 1105.0
offset_bottom = 456.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect6" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 41.0
offset_top = 468.0
offset_right = 1105.0
offset_bottom = 522.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect7" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 59.0
offset_top = 537.0
offset_right = 1087.0
offset_bottom = 591.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="ColorRect8" type="ColorRect" parent="controls_cont/Node2D"]
offset_left = 114.0
offset_top = 600.0
offset_right = 1034.0
offset_bottom = 643.0
color = Color(0.25882354, 0.1254902, 0, 0.48235294)

[node name="TextureRect4" type="TextureRect" parent="controls_cont/Node2D"]
modulate = Color(0, 0, 0, 1)
offset_left = 541.0
offset_top = 156.0
offset_right = 592.0
offset_bottom = 204.0
texture = ExtResource("10_alvbl")

[node name="TextureRect5" type="TextureRect" parent="controls_cont/Node2D"]
modulate = Color(0, 0, 0, 1)
offset_left = 810.0
offset_top = 158.0
offset_right = 861.0
offset_bottom = 206.0
texture = ExtResource("11_wv8t4")

[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="skills" to="." method="_on_skills_pressed"]
